# get-programming-with-haskell

./: README.md
unit1/: cup.hs  robots.hs
unit2/: Bits.hs  Cipher.hs  OTP.hs  Rot.hs  RotChar.hs  fourletter.hs  prng.hs  threeletter.hs
unit4/: Common.hs  Directory.hs  Lookup.hs  marc.hs  sample.mrc
unit5/: candidates.hs  hinq.hs
unit6/: README.md  primes.cabal
unit6/src/: Primes.hs
unit6/test/: Spec.hs
unit7/db-lesson/: build_db.sql  create-db.sh  db-lesson.cabal
unit7/db-lesson/app/: Main.hs
unit7/db-lesson/db/: build_db.sql
unit7/http-lesson/: http-lesson.cabal
unit7/http-lesson/app/: Main.hs
unit7/json-lesson/: json-lesson.cabal
unit7/json-lesson/app/: Main.hs
unit7/st-lesson/: STArrays.hs  st-lesson.cabal
