cabal-version:       >=1.10
name:                primes
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
-- copyright:
-- category:
build-type:          Simple

library
  exposed-modules:     Primes
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite primes-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       primes,
                       QuickCheck
  ghc-options:         -Wall
