name:                db-lesson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/db-lesson#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable db-lesson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , time
                     , text
                     , sqlite-simple
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
