name:                json-lesson
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/json-lesson#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable json-lesson-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
  ghc-options:        -Wall
